# Smart_Home

./: .clang-format  .gitignore  CMakeLists.txt  Main.qml  README.md  lint.sh  main.cpp
android/: AndroidManifest.xml
drivers/: CMakeLists.txt  README.md
drivers/actuators/: Actuator.cpp  Actuator.h  AirPurifierActuator.cpp  AirPurifierActuator.h  CMakeLists.txt  HomePodActuator.cpp  HomePodActuator.h  LQtActuator.cpp  LQtActuator.h  LQtAirPurifierActuator.cpp  LQtAirPurifierActuator.h  LQtHomePodActuator.cpp  LQtHomePodActuator.h  LQtTVActuator.cpp  LQtTVActuator.h  LQtThermostatActuator.cpp  LQtThermostatActuator.h  LQtWiFiActuator.cpp  LQtWiFiActuator.h  TVActuator.cpp  TVActuator.h  ThermostatActuator.cpp  ThermostatActuator.h  WiFiActuator.cpp  WiFiActuator.h
drivers/sensors/: CMakeLists.txt  HumiditySensor.cpp  HumiditySensor.h  LQtHumiditySensor.cpp  LQtHumiditySensor.h  LQtSensor.cpp  LQtSensor.h  LQtTemperatureSensor.cpp  LQtTemperatureSensor.h  Sensor.cpp  Sensor.h  TemperatureSensor.cpp  TemperatureSensor.h
qml/: Colors.qml  DesktopApp.qml  Main.qml  MobileApp.qml
qml/components/: SearchBar.qml
qml/controls/: LQtControlsCard.qml  LQtControlsPanel.qml  LQtDial.qml  LQtEllipseButtonWithTexts.qml  LQtIconsButton.qml  LQtProgressBar.qml  LQtWeeklyPowerCard.qml
qml/drawer/: LQtAutomatedItem.qml  LQtDrawer.qml  LQtIconButtonWithText.qml  LQtMenuItem.qml  LQtProfile.qml  LQtSearchBar.qml
qml/hw_controls/: LQtControlsCard.qml  LQtControlsPanel.qml  LQtDial.qml  LQtEllipseButtonWithTexts.qml  LQtIconWithTexts.qml  LQtIconsButton.qml  LQtProgressBar.qml  LQtWeeklyPowerCard.qml
qml/living_room/: LQtAccessory.qml  LQtAccessoryWithMusic.qml  LQtFeedInscribed.qml  LQtIconWithText.qml  LQtLivingRoom.qml  LQtVideoFeed.qml
qml/room_controls/: LQtAccessory.qml  LQtAccessoryWithMusic.qml  LQtFeedInscribed.qml  LQtIconWithText.qml  LQtMusic.qml  LQtRoom.qml  LQtSlider.qml  LQtThemeSwitch.qml  LQtVideoFeed.qml
qml/user/: LQtLogin.qml
services/: CMakeLists.txt  LQtDriverService.cpp  LQtDriverService.h  LQtHomePodState.cpp  LQtHomePodState.h  LQtThermostatState.cpp  LQtThermostatState.h
src/: CMakeLists.txt  main.cpp
src/apps/: CMakeLists.txt  DesktopApp.qml  MobileApp.qml
src/constants/: AppSettings.qml  CMakeLists.txt  Colors.qml
src/drawer/: CMakeLists.txt  LQtAutomatedItem.qml  LQtDrawer.qml  LQtIconButtonWithText.qml  LQtMenuItem.qml  LQtProfile.qml  LQtSearchBar.qml
src/room/: CMakeLists.txt  LQtAccessory.qml  LQtAccessoryWithMusic.qml  LQtFeedInscribed.qml  LQtIconWithText.qml  LQtMusic.qml  LQtRoom.qml  LQtSlider.qml  LQtThemeSwitch.qml  LQtVideoFeed.qml
src/settings/: CMakeLists.txt  LQtProfileImage.qml  LQtSettings.qml  LQtSettingsItemDelegate.qml  LQtSettingsModel.qml  LQtSettingsSectionDelegate.qml  README.md
src/usage/: CMakeLists.txt  CircularSlider.qml  LQtControlsCard.qml  LQtControlsPanel.qml  LQtDial.qml  LQtEllipseButtonWithTexts.qml  LQtIconWithTexts.qml  LQtIconsButton.qml  LQtProgressBar.qml  LQtWeeklyPowerCard.qml  README.md
src/user/: CMakeLists.txt  LQtLogin.qml  UserDatabase.qml
src/utils/: CMakeLists.txt  README.md  Toast.qml  ToastManager.qml
utils/: CMakeLists.txt  NonCopyable.h
